@@ -1,3 +1,10 @@
+2005-10-06    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>
+
+	* httpAdapter.c, dbpAdapter.c, msgqueue.c, 
+	sfcCertificateAuthentication.c:
+	Bug 1313902. Changed IPC key creation via ftok to use the
+	sfcbd binary file instead of '.'. Set creation mode to 0600.
+
 2005-10-05    <mihajlov@dyn-9-152-143-45.boeblingen.de.ibm.com>
 
 	* httpAdapter.c, control.c, sfcb.cfg.pre.in, 
